# assessment_engine

./: .assessment_env.sh  .coveragerc  .gitignore  .pre-commit-config.yaml  A5_CHECKLIST.md  AGENTS.md  CHATGPT.md  GEMINI.md  NTT_DATA_Eurovision_RFP_Analysis (1).docx  README.md  assessment_env.sh  check_t2_files.py  compare_docs.py  extract_t4_text.py  extract_t5_text.py  finish_redeia_execution.sh  fix_docs.py  fix_placeholders.py  ingest_eurovision.py  ingest_redeia.py  inspect_p_find.py  llms-full.txt  llms.txt  orchestrate_redeia2.sh  orchestrate_redeia3.sh  orchestrate_redeia4.sh  orchestrate_redeia_clean.sh  orchestrate_redeia_final.sh  orchestrate_redeia_test.sh  pyproject.toml  pytest.ini  read_pdf_test.py  requirements.txt  resume_eurovision.sh  resume_redeia.sh  resume_redeia2.sh  resume_redeia3.sh  run_eurovision_demo.sh  run_ivirma_clean.sh  run_redeia_auto.sh  (+12 more)
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/change-plan/: plan.json  semantic_review_summary.json
.github/scripts/: orchestrator-gemini-executor.sh  orchestrator-github-executor.sh  reconcile_prs.sh
.github/workflows/: agent-evals.yml  ci.yml  daily-auto-heal.yml  debug.yml  docs-governance.yml  docs-self-healing.yml  orchestrator-pr-reconcile.yml  quality.yml  typing.yml
_PROJECT_ARCHIVE_/_ARCHIVE_PROJECT/: fix_placeholders.py  run_ivirma.sh  run_smoke_t2.sh  verify_b4_resilience.py
archive/tests/: test_api_ping_eu.py
archive/tools/: update_mock.py
business_command_center/: README.md  package-lock.json
docs/: README.md  SYSTEM_ARCHITECTURE.md  documentation-map.yaml  documentation_audit.md
docs/ai/: documentation-governance.md
docs/architecture/: README.md  apex_maturity_model_roadmap.md  assessment_factory_flow.md  client-intelligence.md  command-center-roadmap.md  critical-modules.md  data-provenance-ontology.md  elite-governance-2026.md  epistemic-graph-architecture.md  executive-project-guide.md  global-commercial-pipelines.md  mcp-mode.md  policy-engine-architecture.md  rage-architecture.md  roadmap_vision.md  security-boundaries.md  tower-pipeline.md  working-artifacts.md
docs/audits/: AUDIT_FRAMEWORK.md  AUDIT_RESULTS.md  GOVERNANCE_IMPROVEMENT_PROPOSAL.md  IMPROVEMENT_BACKLOG.md
docs/contracts/: artifact-contracts.md  payload-render-boundaries.md  rage_rubric_payload.md  tower_annex_design.md  tower_annex_payload.md  tower_blueprint_payload.md  tower_main_report_coverage_matrix.md  tower_main_report_long_template.md
docs/gemini_documentation/: README.md  ai_client.md  build_evidence_ledger.md  build_global_report_payload.md  build_tower_annex_template_payload.md  generate_tower_radar_chart.md  lib_contract_utils.md  lib_review_resilience.md  lib_runtime_env.md  lib_runtime_paths.md  lib_text_utils.md  mcp_server.md  prompts_blueprint_prompts.md  prompts_commercial_prompts.md  prompts_conclusion_prompts.md  prompts_global_prompts.md  prompts_tobe_prompts.md  render_web_presentation.md  run_commercial_refiner.md  run_global_pipeline.md  run_scoring.md  run_tower_blueprint_engine.md  schemas_blueprint.md  schemas_global_report.md  tests_test_contract_handover.md  tests_test_t5_golden.md  tools_check_docx_unresolved_placeholders.md  tools_generate_smoke_data.md
docs/operations/: README.md  agentic-development-workflow.md  ci-cd-workflows.md  (+12 more)
engine_config/: abbreviations_glossary.json  brand_profile.json  locales.json  model_profiles.json  rate_card.json  runtime_manifest.json
scripts/: check_initiatives_mapping.py  check_t2_files.py  compare_docs.py  compare_intelligence.py  diagnose_google.py  diagnose_google_official.py  diagnose_google_sa.py  elevate_documentation.py  enforce_english_comments.py  enrich_docstrings.py  extract_and_patch_plan.py  extract_t4_text.py  extract_t5_text.py  generate_eurovision_word_report.py  generate_exhaustive_findings_report.py  generate_final_perfect_report.py  git_todo_autotracker.py  inspect_p_find.py  inspect_t2_payload_critical.py  inspect_t5_payload.py  migrate_redeia_to_graph.py  mini_test_adk_grounding.py  mini_test_google.py  mini_test_sovereign.py  semantic_comment_linter.py  stress_test_redeia_graph.py  test_grounding_direct.py  test_pdf_snapshot.py  visualize_doc_map.py
templates/: Template_Documento_Anexos_Alpha_v06_Tower_Annex_v2_6.docx  global_report_template.docx  lineage_portal_template.html  web_dashboard.html
tests/: __init__.py  artifact_helpers.py  conftest.py  test_agentic_benchmarker.py  test_ai_client.py  test_apex_infrastructure.py  test_bootstrap_from_matrix.py  test_build_case_input.py  test_build_global_report_payload.py  test_build_tower_annex_template_payload.py  test_client_intelligence.py  test_compile_llms_full.py  test_contract_handover.py  test_document_integrity.py  test_docx_compiler.py  test_dynamic_genericity_fuzzing.py  test_dynamic_glossary.py  test_environment.py  test_epistemic_graph_v3.py  test_epistemic_schema.py  test_evidence_provenance.py  test_generate_smoke_data.py  test_global_coherence.py  test_global_maturity_policy.py  test_json_parser.py  test_localized_branding.py  test_maturity_band.py  test_maturity_band_alignment.py  test_maturity_band_characterization.py  test_mcp_contracts.py  test_mcp_server.py  test_payload_validation.py  test_pipeline_env_propagation.py  test_pipeline_runtime.py  test_po_run_wrapper.py  test_policy_engine.py  test_product_owner_prompts.py  test_prompt_registry.py  test_remediation_playbooks.py  test_render_commercial_report.py  (+26 more)
tmp/: poc_vertex_caching.py
(+545 files in other folders)
