[project]
name = "assessment-engine"
version = "0.1.0"
description = "AI Assessment Engine for Technology Architecture"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-aiplatform",
    "google-adk",
    "google-genai",
    "pydantic",
    "pydantic-settings",
    "python-docx",
    "matplotlib",
    "python-dotenv",
    "python-json-logger",
    "opentelemetry-distro",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-logging"
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
assessment_engine = ["templates/*.html"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"] # PEP8 errors, pyflakes, isort
ignore = ["E501"] # Avoid line too long since formatter handles it

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
warn_unused_ignores = true
