[project]
name = "assessment-engine"
version = "0.1.0"
description = "AI Assessment Engine for Technology Architecture"
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "google-cloud-aiplatform",
    "google-adk",
    "google-genai",
    "pydantic",
    "pydantic-settings",
    "python-docx",
    "matplotlib",
    "python-dotenv",
    "python-json-logger",
    "opentelemetry-distro",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-logging",
    "networkx",
    "rich",
    "tree_sitter",
    "tree_sitter_python",
    "mcp",
    "tenacity",
    "vertexai",
    "google-api-core",
    "libcst"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "TD002", "TD003", "ERA"]
ignore = ["E501", "D100", "D104", "D205", "D209", "D107", "D103", "E402", "E701"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Exclude tests and legacy packages from strict docstring and commented-out code checks
"tests/**/*.py" = ["D", "ERA"]
"src/assessment_engine/**/*.py" = ["D", "ERA"]

# Relax docstring requirements in application helpers and adapters to prevent over-engineering
"src/application/**/*.py" = ["D101", "D102", "D103", "D107", "D205", "D417"]
"src/adapters/**/*.py" = ["D101", "D102", "D103", "D107", "D205", "D417"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true
exclude = ["_PROJECT_ARCHIVE_/", "working/", "src/adapters/", "src/application/tools/", "src/application/render_", "src/application/generate_", "src/infrastructure/docx_render_utils.py"]

[[tool.mypy.overrides]]
module = [
    "pythonjsonlogger",
    "pythonjsonlogger.*",
    "rich.*",
    "google.*",
    "networkx",
    "opentelemetry.*",
    "tree_sitter",
    "tree_sitter_python",
    "mcp.*",
    "hypothesis",
    "tenacity",
    "vertexai.*",
    "docx.*",
    "matplotlib.*",
    "jinja2.*",
    "yaml.*",
    "pytest.*",
    "pytest_mock.*",
    "zipfile.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "adapters.*",
    "application.*",
    "assessment_engine.*"
]
ignore_errors = true
